@@ -7904,8 +7904,6 @@ operator|+
 name|this
 operator|.
 name|taskId
-operator|+
-literal|" "
 argument_list|)
 expr_stmt|;
 block|}
