@@ -16,6 +16,44 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+operator|.
+name|Entry
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -49,35 +87,6 @@ operator|.
 name|Test
 import|;
 end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-operator|.
-name|Entry
-import|;
-end_import
 begin_class
 DECL|class|TestSolrQueryResponse
 specifier|public
@@ -86,6 +95,316 @@ name|TestSolrQueryResponse
 extends|extends
 name|LuceneTestCase
 block|{
+annotation|@
+name|Test
+DECL|method|testToLog
+specifier|public
+name|void
+name|testToLog
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|SolrQueryResponse
+name|response
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"toLog initially not empty"
+argument_list|,
+literal|0
+argument_list|,
+name|response
+operator|.
+name|getToLog
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"logid_only"
+argument_list|,
+name|response
+operator|.
+name|getToLogAsString
+argument_list|(
+literal|"logid_only"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// initially empty, then add something
+name|response
+operator|.
+name|addToLog
+argument_list|(
+literal|"key1"
+argument_list|,
+literal|"value1"
+argument_list|)
+expr_stmt|;
+block|{
+specifier|final
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|it
+init|=
+name|response
+operator|.
+name|getToLog
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|entry1
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"key1"
+argument_list|,
+name|entry1
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"value1"
+argument_list|,
+name|entry1
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|"key1=value1"
+argument_list|,
+name|response
+operator|.
+name|getToLogAsString
+argument_list|(
+literal|""
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"abc123 key1=value1"
+argument_list|,
+name|response
+operator|.
+name|getToLogAsString
+argument_list|(
+literal|"abc123"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// and then add something else
+name|response
+operator|.
+name|addToLog
+argument_list|(
+literal|"key2"
+argument_list|,
+literal|"value2"
+argument_list|)
+expr_stmt|;
+block|{
+specifier|final
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|it
+init|=
+name|response
+operator|.
+name|getToLog
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|entry1
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"key1"
+argument_list|,
+name|entry1
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"value1"
+argument_list|,
+name|entry1
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|entry2
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"key2"
+argument_list|,
+name|entry2
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"value2"
+argument_list|,
+name|entry2
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|"key1=value1 key2=value2"
+argument_list|,
+name|response
+operator|.
+name|getToLogAsString
+argument_list|(
+literal|""
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"xyz789 key1=value1 key2=value2"
+argument_list|,
+name|response
+operator|.
+name|getToLogAsString
+argument_list|(
+literal|"xyz789"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testAddHttpHeader
